# LinkedListTask

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
Tests/: CMakeLists.txt
Tests/reference/: reference_outlet.out
Tests/src/: main.cpp
include/: LinkedList.hpp
src/: LinkedList.cpp  main.cpp
